--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <p>This is a simple aim training game to practice clicking accuracy and speed. Choose a game mode and difficulty, then press Start to begin.</p>
     <h3>Game Modes</h3>
     <ul>
-        <li><strong>Flick</strong>: Click the Robots as they respawn — target is a fixed number of successful hits.</li>
-        <li><strong>Pulse</strong>: Robots spawn over time; click them before too many appear. If 5 Robots are present at once you lose. Difficulty controls spawn rate.</li>
-        <li><strong>Trio</strong>: Three Robots are present at a time; click a target number of Robots to finish the round.</li>
+        <li><strong>Flick</strong>: Click the Robots as they respawn. Target is 10 successful hits.</li>
+        <li><strong>Pulse</strong>: Robots spawn over time. Click them before too many appear. If 5 Robots are present at once you lose. Difficulty controls spawn rate.</li>
+        <li><strong>Trio</strong>: Three Robots are present at a time. Click a target number of Robots to finish the round.</li>
     </ul>
     <h3 style="margin-top:8px">Sounds Used</h3>
     <ul style="margin-left:18px">
